--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^3.10.2"
+    "@hono/zod-validator": "^0.1.11",
+    "hono": "^3.10.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230914.0",
