--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "scripts": {
-    "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
-  },
-  "dependencies": {
-    "@hono/zod-validator": "^0.1.11",
-    "hono": "^3.10.2",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230914.0",
-    "wrangler": "^3.15.0"
+    "name": "ttl-mono",
+    "private": true,
+    "workspaces": [
+      "apps/*"
+    ],
+    "scripts": {
+      "build": "turbo run build",
+      "dev": "turbo run dev",
+      "lint": "turbo run lint",
+      "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    },
+    "devDependencies": {
+      "prettier": "^3.1.0",
+      "turbo": "^1.11.1"
+    },
+    "packageManager": "npm@8.19.4",
+    "engines": {
+      "node": ">=18"
+    }
   }
-}
