--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.14.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -30,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "wrangler": "^3.22.1"
   }
 }
